v0.6.0
* minor fixes and improvements
  * added modal frame
  * moved RegisterFrame to gui.customswing
  * removed anonymous functions
-> overhaul password system
  * separated encryption handling and password gui
  X implemented logout
  * implemented password change
  X implemented specific password for archives
  * added gui for un-assumed password
    * added option for using profile password
* reworked import and export
  * removed export from profile flags
  * added import modes
  * added .xtbl option to import
    * password not assumed
  * added import gui
  * added export gui

v0.5.5
* rearranged fields in defaults
* proofread changelog
* removed "mili" and replaced with "milli"
* fixed factor in currency.json

v0.5.4
* de-generified entries for better memory handling
  * data is now stored as fields rather than in array of generic objects
  * Entry made abstract
  * removed header object
  * removed field object
    * it was decided that entries no longer required flexibility of this kind.
* removed unused LTypes
  * removed LString, LInt, LDecimal, LJson
  * removed LType and replaced with interface calls
* removed ToolBox
* changed ExportableToJsonObject to ExportableToJson
* added entry imports to Examples
  * added transaction import
    * added metadata
  * added budget import

v0.5.3
* updated to java 18
* updated readme
* minor bug fixes
* JsonObject optimized
* optimized memory usage by replacing hashmap with arraylist in Entry and Header

v0.5.2
* added check metadata
  * created CheckMetadata class
  * added creator and getter metadata methods to TransactionEntry
  * added check metadata to advanced transaction metadata tab
    * integrated at a basic level
    * option for incomplete added
  * added support for check metadata to DataHandler
  * added CheckGui
  * added check meta to TransactionEntry.toString
* added meta flags to MainGui
* added option to use existing budgets as templates

v0.5.1
* rationalized alpha